# ChatUp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
QtChatClient/: CMakeLists.txt  applicationsettings.cpp  applicationsettings.h  authenticationmaster.cpp  chatclient.cpp  chatclient.h  chatroommodel.cpp  chatroommodel.h  chatroomstructs.h  chatwindow.cpp  chatwindow.h  main.cpp  messageconstructor.cpp  messageconstructor.h  messagehistorymodel.cpp  messagehistorymodel.h  quickwindow.h  res.qrc  servermethodcaller.cpp  servermethodcaller.h  singletonholder.h  userverifydialog.cpp  wsclient.cpp  wsclient.h
QtChatClient/components/: AttachmentFileDialog.qml  CMakeLists.txt  ChatBox.qml  ChatInput.qml  EmojiList.qml  InputBox.qml  MainWindow.qml  RoomList.qml  RoundedFrame.qml  chatwindow.h  components_global.h  userverifydialog.cpp  userverifydialog.h
QtChatClient/components/emojies/: emojies.txt
QtChatClient/components/translations/: comp_en.ts  comp_ru.ts
QtChatClient/components/ui/: CMakeLists.txt  MessageCloud.qml  TextLabel.qml
QtChatClient/qml/: AuthorizationDialog.qml  ChatInput.qml  InputBox.qml  MainWindow.qml  RoomList.qml
app/: CMakeLists.txt  abstractchatwindow.cpp  abstractchatwindow.h  abstractwindowfactory.h  app.cpp  app.h  main.cpp  qmlaudiooutput.h  qmlchatwindow.cpp  qmlchatwindow.h  qmlprofileviewer.cpp  qmlprofileviewer.h  qmlstartupwindow.cpp  qmlstartupwindow.h  qmlwindowfactory.cpp  qmlwindowfactory.h
app/qml/: AuthorizationPage.qml  CallBox.qml  CallParticipantView.qml  ChatBox.qml  ChatInput.qml  ChatWindow.qml  ColoredFrame.qml  CreateRoomDialog.qml  DirectPage.qml  EmojiList.qml  ForeignMessageDelegate.qml  ForeignProfileViewer.qml  IconButton.qml  LoadingPage.qml  MenuPanel.qml  MessageDelegate.qml  MessagesView.qml  ProfileDialog.qml  ProfileViewer.qml  RoomList.qml  RoomView.qml  RoomView.qml.autosave  RoomsPage.qml  RoundedFrame.qml  SelectUserDialog.qml  SettingsPage.qml  StandardDelegate.qml  StartupWindow.qml  SysButton.qml  TitleBar.qml  UsersView.qml
lib/ChatClient/: CMakeLists.txt  abstractchatwindow.cpp  abstractchatwindow.h  abstractuserverifier.cpp  abstractuserverifier.h  abstractwindowfactory.cpp  abstractwindowfactory.h  applicationfactory.cpp  applicationfactory.h  applicationsettings.h  authenticationmaster.cpp  authenticationmaster.h  authentificationmaster.h  callerauthentificationmaster.cpp  callerauthentificationmaster.h  callerchatcontrollers.cpp  callerchatcontrollers.h  chatclient_include.h  chatcontroller.cpp  chatcontroller.h  chatroommodel.h  chatroomstructs.cpp  chatwindow.cpp  clientmethoddispatcher.cpp  clientmethoddispatcher.h  messageconstructor.cpp  messageconstructor.h  messagehistorymodel.cpp  messagemodel.cpp  messagemodel.h  networkfactory.cpp  networkfactory.h  offlineservermethodcaller.cpp  offlineservermethodcaller.h  qmlchatwindow.cpp  qmlchatwindow.h  qmlfuturemapper.h  qmlstartupwindow.cpp  qmlstartupwindow.h  qmlwindowfactory.cpp  (+20 more)
lib/ChatClient/qml/: AuthorizationDialog.qml  AuthorizationPage.qml  CMakeLists.txt  ChatBox.qml  ChatInput.qml  ChatWindow.qml  ChatWindow.qml.autosave  EmojiList.qml  LoadingPage.qml  MainWindow.qml  MessageDelegate.qml  RoomList.qml  StartupWindow.qml
lib/calls/: CMakeLists.txt  callcontroller.cpp  callcontroller.h  calls_include.h
lib/core/: CMakeLists.txt  applicationsettings.cpp  applicationsettings.h  cache.h  core.h  core_include.h  data.cpp  data.h  idmodel.h  messagemodel.cpp  messagemodel.h  participatemodel.cpp  participatemodel.h  qtquickcontrols2.conf  roommodel.cpp  roommodel.h  scopeguard.h  standarderror.h  startupwindow.h  taskqueue.cpp  taskqueue.h  userhandle.cpp  userhandle.h  userinfo.h  usersmodel.h
lib/core/models/: groupmodel.cpp  groupmodel.h  identifyingmodel.cpp  identifyingmodel.h  messagemodel.cpp  messagemodel.h  participatemodel.cpp  usermodel.cpp  (+2 more)
lib/media/: CMakeLists.txt  audiooutput.cpp  audiooutput.h  camerainput.cpp  camerainput.h  camerapipeline.cpp  camerapipeline.h  datapipe.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  media.cpp  media.h  media_include.h  microphoneinput.cpp  microphoneinput.h  microphonepipeline.h  pipelines.cpp  pipelines.h  rtppacketizer.cpp  rtppacketizer.h  streamsource.cpp  streamsource.h
lib/network/: CMakeLists.txt  authenticationmaster.cpp  authenticationmaster.h  callerauthentificationmaster.cpp  callerauthentificationmaster.h  callerchatcontrollers.cpp  callerchatcontrollers.h  callernetworkmanager.cpp  callernetworkmanager.h  callscontroller.cpp  callscontroller.h  chatcontroller.cpp  chatcontroller.h  clientmethoddispatcher.h  connectionhandler.h  messageconstructor.cpp  messageconstructor.h  network.h  network_include.h  networkcoordinator.cpp  networkcoordinator.h  networkfactory.cpp  networkfactory.h  networkinterface.h  networkmanager.cpp  networkmanager.h  qtwsclient.cpp  qtwsclient.h  rpc.cpp  rpc.h  rtcservice.cpp  rtcservice.h  serverhandler.cpp  serverhandler.h  servermethodcaller.h  serverrpcwrapper.cpp  serverrpcwrapper.h  transport.h  wsclient.cpp  wsclient.h  (+6 more)
src/: CMakeLists.txt  abstractchatwindow.cpp  abstractchatwindow.h  abstractwindowfactory.h  app.cpp  app.h  main.cpp  qmlchatwindow.cpp  qmlchatwindow.h  qmlobjectconverter.h  qmlstartupwindow.cpp  qmlstartupwindow.h  qmlwindowfactory.cpp  qmlwindowfactory.h
src/qml/: AuthorizationDialog.qml  AuthorizationPage.qml  CallBox.qml  CallParticipantView.qml  ChatBox.qml  ChatBox.qml.autosave  ChatInput.qml  ChatWindow.qml  ColoredFrame.qml  CreateRoomDialog.qml  DirectPage.qml  EmojiList.qml.autosave  ForeignProfileViewer.qml  MainWindow.qml  MenuPanel.qml  MenuPanelItem.qml  MessageDelegate.qml  MessageDelegate.qml.autosave  MessagesView.qml  ProfileViewer.qml  RoomDelegate.qml  RoomList.qml  RoomList.qml.autosave  RoomsPage.qml  RoomsPage.qml.autosave  StandardDelegate.qml  StartupWindow.qml.autosave  UserFinder.qml.autosave  UserList.qml  qml.qrc
src/resources/: resources.qrc
src/translations/: comp_ru.ts
tests/unit/: CMakeLists.txt  app_test.cpp  servermethodcaller_test.cpp
(+36 files in other folders)
